# barcode-xpress

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  barcode-xpress.spec  build.ps1  build.sh  main.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml  ruff.yml
app/: __init__.py  main.py  templates.py
app/config/: __init__.py  middleware.py  settings.py
app/models/: __init__.py  barcode.py
app/routers/: __init__.py  barcode.py  input.py
app/utils/: __init__.py  browser.py  input_simulator.py  logger.py  network.py  qr_generator.py
assets/icons/: README.md  barcode-xpress.icns
static/css/: style.css
static/js/: main.js
tailwindcss/: package-lock.json  package.json  postcss.config.js  tailwind.config.js
tailwindcss/src/: main.css  theme.css
tauri/: Cargo.toml  tauri.conf.json
tauri/src/: main.rs
templates/: base.html  index.html  mobile_input.html
templates/partials/: message.html
